# geotrace-forensics

./: .gitignore  ANALYST_GUIDE.md  CHANGELOG.md  COURTROOM_GUIDE.md  DEMO_CASE_GUIDE.md  DEMO_VIDEO_SCRIPT.md  DISCLAIMER.md  IMPLEMENTED_V10.md  IMPLEMENTED_V11.md  IMPLEMENTED_V82_REDESIGN.md  IMPLEMENTED_V9.md  INTEGRATION_SUMMARY.md  INVESTIGATION_UPGRADE_SUMMARY.md  LICENSE  PATCH_SUMMARY_v12_10_31_CI_FULL_FIX.md  PATCH_SUMMARY_v12_10_31_RELEASE_HARDENING.md  PATCH_SUMMARY_v12_10_31_RELEASE_HARDENING_v3.md  POLISH_SUMMARY.md  PRIVACY.md  README.md  REFINE_SUMMARY.md  RELEASE_CHECKLIST.md  RELEASE_PRIORITY_PLAN.md  REVIEW_PAGE_FIX_NOTES.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UI_POLISH_SUMMARY.md  USER_GUIDE_ANALYST_GUIDE.md  VERSION  build_windows_demo_exe.bat  build_windows_exe.bat  fix_windows_temp.bat  geotrace_forensics_x.spec  geotrace_forensics_x_demo.spec  import_project_geo_data.bat  main.py  make_release.bat  pyproject.toml  pytest.ini  requirements-ai-heavy.txt  (+16 more)
app/: __init__.py  config.py
case_data/: README.txt
data/: offline_landmarks_seed.json  validation_ground_truth.real_template.json  validation_ground_truth.sample.json
demo_evidence/: DEMO_CORPUS_OVERVIEW.md  validation_ground_truth.json
docs/: CURRENT_STACK_STATUS_EXPLAINED.md  GEO_DATA_SOURCES.md  GEO_PROJECT_DATA_IMPORT.md  INSTALL_OPTIONAL_STACK_WINDOWS.md  LOCAL_VISION_SETUP.md  OPTIONAL_FORENSICS_AI_STACK.md  P1_P2_IMPLEMENTATION_NOTES.md
exports/: README.txt
screenshots/: README.md
tests/: test_agent_contracts.py  test_agent_factory_and_narrator.py  test_ai_engine.py  (+35 more)
(+232 files in other folders)
